Closed Bug 688551 Opened 15 years ago Closed 15 years ago

Fixing GCC 4.6 warnings from bug 684526

Categories

(Firefox Build System :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla9

People

(Reporter: igor, Assigned: igor)

References

Details

Attachments

(1 file)

Attached patch fix — — Splinter Review
With the landing of the bug #684526 I got the warning on every include of jsapi.h: /home/igor/m/mc/js/src/jsapi.h: In destructor ‘JS::Anchor<T>::~Anchor() [with T = JS::Value]’: /home/igor/m/mc/js/src/jsapi.h:800:21: warning: variable ‘bits’ set but not used [-Wunused-but-set-variable] The attached patch fixes that by specializing Anchor destructor for Value only outside GCC.
Attachment #561810 - Flags: review?(luke)
Comment on attachment 561810 [details] [diff] [review] fix Oops; sorry.
Attachment #561810 - Flags: review?(luke) → review+
Assignee: nobody → igor
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: