bug 688551 - specialize ~Anchor for Value only outside GCC. r=luke